--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,7 @@
   ],
   "plugins": [
     "transform-runtime",
-    "react-hot-loader/babel",
+    // "react-hot-loader/babel",
     "transform-object-rest-spread",
     "transform-react-jsx"
       // 开启react代码的模块热替换（HMR）
