--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "temp": "NODE_ENV=production webpack -p --config webpack.pro.config.js ",
     "test": "webpack-dev-server --devtool eval-source-map --progress --host 127.0.0.1 --colors --hot --content-base ./build --history-api-fallback",
     "build": "./node_modules/.bin/babel --out-dir ./build ./app/src/",
-    "dev": "webpack-dev-server --devtool eval-source-map --progress --host 127.0.0.1 --colors --content-base ./build --history-api-fallback"
+    "dev": "webpack-dev-server --devtool eval-source-map --progress --host 127.0.0.1 --colors --content-base ./build --history-api-fallback --open"
   },
   "author": "Fangzheng",
   "license": "MIT",
