--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Fangzheng",
   "license": "MIT",
   "devDependencies": {
+    "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -20,11 +21,15 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.18.2",
+    "typescript": "^2.7.2",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
