新增readme，修改属性名称定义

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-dragger-layout",
-  "version": "0.0.7",
+  "name": "dragact",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
