--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragact",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -56,12 +56,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "highlightjs": "^9.10.0",
     "jest": "^22.3.0",
     "power-assert": "^1.4.4",
     "prop-types": "^15.5.10",
     "react": "^16.3.0-alpha.1",
     "react-dom": "^16.3.0-alpha.1",
     "reselect": "^3.0.1",
+    "showdown": "^1.8.6",
     "typescript-babel-jest": "^1.0.5"
   }
 }
