Upgrade babel-jest to 23.6.0

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/react-dom": "^16.0.4",
     "@types/reselect": "^2.2.0",
     "agentframework": "^0.9.9",
-    "babel-jest": "^22.2.2",
+    "babel-jest": "23.6.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -68,5 +68,3 @@
     "typescript-babel-jest": "^1.0.5"
   }
 }
-
-
